--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drint.t-back",
+  "name": "drivent-back",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -23,7 +23,8 @@
     "dev:migration:run": "npm run dev:load-envs prisma migrate deploy",
     "dev:migration:generate": "npm run dev:load-envs prisma migrate dev",
     "dev:seed": "npm run dev:load-envs prisma db seed",
-    "dev": "NODE_ENV=development nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts"
+    "dev": "NODE_ENV=development nodemon --legacy-watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts",
+    "dev:migrate": "npx prisma migrate dev && npm run dev:load-envs prisma db seed && npm run dev"
   },
   "keywords": [
     "driven.t",
